# odoo

./: .gitignore  CLI.md  SETUP.md  odoo.conf.example  pyproject.toml  requirements.txt
custom_addons/artify_backend_theme/: README.rst  __init__.py  __manifest__.py  hooks.py
custom_addons/artify_backend_theme/doc/: RELEASE_NOTES.md
custom_addons/artify_backend_theme/static/description/: index.html
custom_addons/artify_backend_theme/static/src/js/: NavBarArtify.js
custom_addons/artify_backend_theme/static/src/scss/: login.scss  override.scss  style.scss
custom_addons/custom_app/: __manifest__.py
custom_addons/custom_app/controllers/: controllers.py
custom_addons/custom_app/demo/: demo.xml
custom_addons/custom_app/models/: models.py
custom_addons/custom_app/security/: ir.model.access.csv
custom_addons/custom_app/views/: views.xml
docs/: SETUP.md
setup/: odoo-wsgi.example.py  odoo-wsgi.py
